--- a/Home.html
+++ b/Home.html
@@ -4,7 +4,7 @@
   </head>
   <body class="not-loaded">
     <div class="night"></div>
-    <div class="birthday-text">Happy Birthday</div>
+    <div class="birthday-text">Happy Birthday Himma</div>
     <div class="flowers">
       <div class="flower flower--1">
         <div class="flower__leafs flower__leafs--1">
